--- a/FTSE 100 Stock Analysis.ipynb
+++ b/FTSE 100 Stock Analysis.ipynb
@@ -612,7 +612,7 @@
     "    company_eps = soup.select('#chart-table > div:nth-child(3) > div:nth-child(2) > .index-item')[2].text.split(' ')[-1]\n",
     "    eps.append(company_eps)\n",
     "\n",
-    "    company_turnover =  soup.select('#chart-table > div:nth-child(1) > div:nth-child(2) > .index-item')[3].text.split(' ')[-1]\n",
+    "    company_turnover = soup.select('#chart-table > div:nth-child(1) > div:nth-child(2) > .index-item')[3].text.split(' ')[-1]\n",
     "    turnover.append(company_turnover)\n",
     "\n",
     "    company_issue_date = soup.select('#chart-table > div:nth-child(3) > div:nth-child(2) > .index-item')[3].text.split(' ')[3:]\n",
@@ -1875,9 +1875,9 @@
    "outputs": [],
    "source": [
     "# save the dataset into SQL database\n",
-    "engine = create_engine('mssql+pyodbc:///?odbc_connect={}'.format(quoted))\n",
-    "daily_FTSE.to_sql('daily_FTSE', schema='dbo', con=engine, if_exists='append')\n",
-    "print('Dataset appended.')"
+    "# engine = create_engine('mssql+pyodbc:///?odbc_connect={}'.format(quoted))\n",
+    "# daily_FTSE.to_sql('daily_FTSE', schema='dbo', con=engine, if_exists='append')\n",
+    "# print('Dataset appended.')"
    ]
   },
   {
@@ -5055,7 +5055,9 @@
    "cell_type": "code",
    "execution_count": 92,
    "id": "618a5080",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -5081,6 +5083,28 @@
     "plt.title(\"Historical Price Comparison By Month\")\n",
     "plt.xlabel(\"Month\")\n",
     "plt.ylabel(\"Price (£)\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "440fdbdb",
+   "metadata": {},
+   "source": [
+    "## Time Log"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "1b92569c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create text file to log automation\n",
+    "file = open(\"time_log.txt\", \"a\")\n",
+    "day = datetime.datetime.now()\n",
+    "file.write(f\"Time: {day}\\n\")\n",
+    "file.close()"
    ]
   }
  ],
