--- a/FTSE 100 Stock Analysis.ipynb
+++ b/FTSE 100 Stock Analysis.ipynb
@@ -10,6 +10,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "914df9fe",
+   "metadata": {},
+   "source": [
+    "This script webscrapes the daily FTSE 100 stocks from London Stock Exchange for the 100 companies and essentially analyses the data collected by answering some questions stated. Additionally, the data is stored in a database such that when the script is run the following day, the data includes yesterday's data as well as the day the script is run. This builds up on the data used to create a time series of the data obtained each day.\n",
+    "\n",
+    "The second half of the script is historical data which was downloaded from UK Investing website and like the first half of the script, also analyses the data. However, this dataset is fixed from 2001 to 2021."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ff7c57d1",
    "metadata": {},
    "source": [
