--- a/ML Projects/NBA Machine Learning Final.ipynb
+++ b/ML Projects/NBA Machine Learning Final.ipynb
@@ -11782,7 +11782,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b2b94b9",
+   "id": "44d5f95c",
    "metadata": {},
    "source": [
     "### 6.4 Ridge and Random Forest Combined"
@@ -11791,7 +11791,7 @@
   {
    "cell_type": "code",
    "execution_count": 195,
-   "id": "22740d2d",
+   "id": "3248f2db",
    "metadata": {},
    "outputs": [
     {
@@ -11812,7 +11812,7 @@
   {
    "cell_type": "code",
    "execution_count": 196,
-   "id": "f77bd549",
+   "id": "5e166ccc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12369,8 +12369,10 @@
   {
    "cell_type": "code",
    "execution_count": 199,
-   "id": "8ce985ac",
-   "metadata": {},
+   "id": "66826c5d",
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -12967,8 +12969,479 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 205,
+   "id": "336d83fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Year', 'Player', 'Share', 'Predictions', 'Rk', 'Predicted_Rk_ridge', 'Predicted Winner Ridge', 'Predicted_Rk_rfg', 'Predicted Winner Rfg', 'Final_Predicted_Rk', 'Final_Predicted_Winner'], dtype='object')"
+      ]
+     },
+     "execution_count": 205,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "both_models.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "id": "68131a06",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Player</th>\n",
+       "      <th>Share</th>\n",
+       "      <th>Predictions</th>\n",
+       "      <th>Rk</th>\n",
+       "      <th>Final_Predicted_Rk</th>\n",
+       "      <th>Final_Predicted_Winner</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1987</td>\n",
+       "      <td>Magic Johnson</td>\n",
+       "      <td>0.94000</td>\n",
+       "      <td>0.09787</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Magic Johnson</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1988</td>\n",
+       "      <td>Michael Jordan</td>\n",
+       "      <td>0.83100</td>\n",
+       "      <td>0.09928</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Michael Jordan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1989</td>\n",
+       "      <td>Magic Johnson</td>\n",
+       "      <td>0.78200</td>\n",
+       "      <td>0.10300</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Magic Johnson</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1990</td>\n",
+       "      <td>Magic Johnson</td>\n",
+       "      <td>0.69100</td>\n",
+       "      <td>0.09763</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Michael Jordan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1991</td>\n",
+       "      <td>Michael Jordan</td>\n",
+       "      <td>0.92800</td>\n",
+       "      <td>0.09543</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Michael Jordan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1992</td>\n",
+       "      <td>Michael Jordan</td>\n",
+       "      <td>0.93800</td>\n",
+       "      <td>0.08652</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Michael Jordan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1993</td>\n",
+       "      <td>Charles Barkley</td>\n",
+       "      <td>0.85200</td>\n",
+       "      <td>0.07852</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Michael Jordan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1994</td>\n",
+       "      <td>Hakeem Olajuwon</td>\n",
+       "      <td>0.88000</td>\n",
+       "      <td>0.07479</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>David Robinson</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1995</td>\n",
+       "      <td>David Robinson</td>\n",
+       "      <td>0.85800</td>\n",
+       "      <td>0.08343</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>David Robinson</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1996</td>\n",
+       "      <td>Michael Jordan</td>\n",
+       "      <td>0.98600</td>\n",
+       "      <td>0.09368</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Michael Jordan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>1997</td>\n",
+       "      <td>Karl Malone</td>\n",
+       "      <td>0.85700</td>\n",
+       "      <td>0.08675</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Karl Malone</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>1998</td>\n",
+       "      <td>Michael Jordan</td>\n",
+       "      <td>0.93400</td>\n",
+       "      <td>0.07381</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Shaquille O'Neal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>1999</td>\n",
+       "      <td>Karl Malone</td>\n",
+       "      <td>0.70100</td>\n",
+       "      <td>0.06926</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Karl Malone</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>Shaquille O'Neal</td>\n",
+       "      <td>0.99800</td>\n",
+       "      <td>0.09688</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Shaquille O'Neal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>2001</td>\n",
+       "      <td>Allen Iverson</td>\n",
+       "      <td>0.90400</td>\n",
+       "      <td>0.07075</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Shaquille O'Neal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>2002</td>\n",
+       "      <td>Tim Duncan</td>\n",
+       "      <td>0.75700</td>\n",
+       "      <td>0.07656</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Tim Duncan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>2003</td>\n",
+       "      <td>Tim Duncan</td>\n",
+       "      <td>0.80800</td>\n",
+       "      <td>0.07511</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Tim Duncan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>Kevin Garnett</td>\n",
+       "      <td>0.99100</td>\n",
+       "      <td>0.08246</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Kevin Garnett</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>2005</td>\n",
+       "      <td>Steve Nash</td>\n",
+       "      <td>0.83900</td>\n",
+       "      <td>0.05739</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Shaquille O'Neal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>2006</td>\n",
+       "      <td>Steve Nash</td>\n",
+       "      <td>0.73900</td>\n",
+       "      <td>0.05867</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>LeBron James</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>2007</td>\n",
+       "      <td>Dirk Nowitzki</td>\n",
+       "      <td>0.88200</td>\n",
+       "      <td>0.07181</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Dirk Nowitzki</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>2008</td>\n",
+       "      <td>Kobe Bryant</td>\n",
+       "      <td>0.87300</td>\n",
+       "      <td>0.06569</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>LeBron James</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>LeBron James</td>\n",
+       "      <td>0.96900</td>\n",
+       "      <td>0.09114</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>LeBron James</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>LeBron James</td>\n",
+       "      <td>0.98000</td>\n",
+       "      <td>0.08915</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>LeBron James</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>2011</td>\n",
+       "      <td>Derrick Rose</td>\n",
+       "      <td>0.97700</td>\n",
+       "      <td>0.06920</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>LeBron James</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>2012</td>\n",
+       "      <td>LeBron James</td>\n",
+       "      <td>0.88800</td>\n",
+       "      <td>0.08206</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>LeBron James</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>2013</td>\n",
+       "      <td>LeBron James</td>\n",
+       "      <td>0.99800</td>\n",
+       "      <td>0.08869</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>LeBron James</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>2014</td>\n",
+       "      <td>Kevin Durant</td>\n",
+       "      <td>0.98600</td>\n",
+       "      <td>0.08274</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Kevin Durant</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>Stephen Curry</td>\n",
+       "      <td>0.92200</td>\n",
+       "      <td>0.08107</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Stephen Curry</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>Stephen Curry</td>\n",
+       "      <td>1.00000</td>\n",
+       "      <td>0.09668</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Stephen Curry</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>Russell Westbrook</td>\n",
+       "      <td>0.87900</td>\n",
+       "      <td>0.09629</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Russell Westbrook</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>2018</td>\n",
+       "      <td>James Harden</td>\n",
+       "      <td>0.95500</td>\n",
+       "      <td>0.09511</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>James Harden</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>Giannis Antetokounmpo</td>\n",
+       "      <td>0.93200</td>\n",
+       "      <td>0.08675</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Giannis Antetokounmpo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>Giannis Antetokounmpo</td>\n",
+       "      <td>0.95200</td>\n",
+       "      <td>0.09225</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Giannis Antetokounmpo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>Nikola Jokić</td>\n",
+       "      <td>0.96100</td>\n",
+       "      <td>0.08406</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Nikola Jokić</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>Nikola Jokić</td>\n",
+       "      <td>0.87500</td>\n",
+       "      <td>0.08735</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Nikola Jokić</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Year                 Player   Share  Predictions  Rk  Final_Predicted_Rk Final_Predicted_Winner\n",
+       "0   1987          Magic Johnson 0.94000      0.09787   1                   1          Magic Johnson\n",
+       "1   1988         Michael Jordan 0.83100      0.09928   1                   1         Michael Jordan\n",
+       "2   1989          Magic Johnson 0.78200      0.10300   1                   1          Magic Johnson\n",
+       "3   1990          Magic Johnson 0.69100      0.09763   1                   2         Michael Jordan\n",
+       "4   1991         Michael Jordan 0.92800      0.09543   1                   1         Michael Jordan\n",
+       "5   1992         Michael Jordan 0.93800      0.08652   1                   1         Michael Jordan\n",
+       "6   1993        Charles Barkley 0.85200      0.07852   1                   2         Michael Jordan\n",
+       "7   1994        Hakeem Olajuwon 0.88000      0.07479   1                   2         David Robinson\n",
+       "8   1995         David Robinson 0.85800      0.08343   1                   1         David Robinson\n",
+       "9   1996         Michael Jordan 0.98600      0.09368   1                   1         Michael Jordan\n",
+       "10  1997            Karl Malone 0.85700      0.08675   1                   1            Karl Malone\n",
+       "11  1998         Michael Jordan 0.93400      0.07381   1                   3       Shaquille O'Neal\n",
+       "12  1999            Karl Malone 0.70100      0.06926   1                   1            Karl Malone\n",
+       "13  2000       Shaquille O'Neal 0.99800      0.09688   1                   1       Shaquille O'Neal\n",
+       "14  2001          Allen Iverson 0.90400      0.07075   1                   3       Shaquille O'Neal\n",
+       "15  2002             Tim Duncan 0.75700      0.07656   1                   1             Tim Duncan\n",
+       "16  2003             Tim Duncan 0.80800      0.07511   1                   1             Tim Duncan\n",
+       "17  2004          Kevin Garnett 0.99100      0.08246   1                   1          Kevin Garnett\n",
+       "18  2005             Steve Nash 0.83900      0.05739   1                  10       Shaquille O'Neal\n",
+       "19  2006             Steve Nash 0.73900      0.05867   1                   8           LeBron James\n",
+       "20  2007          Dirk Nowitzki 0.88200      0.07181   1                   1          Dirk Nowitzki\n",
+       "21  2008            Kobe Bryant 0.87300      0.06569   1                   3           LeBron James\n",
+       "22  2009           LeBron James 0.96900      0.09114   1                   1           LeBron James\n",
+       "23  2010           LeBron James 0.98000      0.08915   1                   1           LeBron James\n",
+       "24  2011           Derrick Rose 0.97700      0.06920   1                   2           LeBron James\n",
+       "25  2012           LeBron James 0.88800      0.08206   1                   1           LeBron James\n",
+       "26  2013           LeBron James 0.99800      0.08869   1                   1           LeBron James\n",
+       "27  2014           Kevin Durant 0.98600      0.08274   1                   1           Kevin Durant\n",
+       "28  2015          Stephen Curry 0.92200      0.08107   1                   1          Stephen Curry\n",
+       "29  2016          Stephen Curry 1.00000      0.09668   1                   1          Stephen Curry\n",
+       "30  2017      Russell Westbrook 0.87900      0.09629   1                   1      Russell Westbrook\n",
+       "31  2018           James Harden 0.95500      0.09511   1                   1           James Harden\n",
+       "32  2019  Giannis Antetokounmpo 0.93200      0.08675   1                   1  Giannis Antetokounmpo\n",
+       "33  2020  Giannis Antetokounmpo 0.95200      0.09225   1                   1  Giannis Antetokounmpo\n",
+       "34  2021           Nikola Jokić 0.96100      0.08406   1                   1           Nikola Jokić\n",
+       "35  2022           Nikola Jokić 0.87500      0.08735   1                   1           Nikola Jokić"
+      ]
+     },
+     "execution_count": 206,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "both_models[['Year', 'Player', 'Share', 'Predictions', 'Rk', 'Final_Predicted_Rk', 'Final_Predicted_Winner']]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 204,
-   "id": "02118a06",
+   "id": "90f2048d",
    "metadata": {},
    "outputs": [
     {
