--- a/ML Projects/NBA MVP Regression Updated Final.ipynb
+++ b/ML Projects/NBA MVP Regression Updated Final.ipynb
@@ -82,7 +82,8 @@
     "2. Data cleaning\n",
     "3. Exploratory Data Analysis\n",
     "4. Model\n",
-    "5. Combination of Models"
+    "5. Evaluation\n",
+    "6. Combination of Models"
    ]
   },
   {
@@ -13133,15 +13134,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "778908e6",
+   "id": "bba11a72",
    "metadata": {},
    "source": [
-    "## 6. Evaluation"
+    "## 5. Evaluation"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9ba6cacf",
+   "id": "23f04754",
    "metadata": {},
    "source": [
     "The model works by predicting the MVP shares of a player (usually around 12 players have a voting, whilst the rest do not i.e. 0 shares) using the data from previous years and their corresponding MVP shares to predict the current year MVP shares. It is evident that the random forest regressor predicts the MVP winner 64% for all years, with a test score of 0.67 relative to its 0.93 training score. This could indicate overfitting of the model. Nonetheless, the predictions are more accurate as the year increases which could be due to having more training data or because as mentioned before, the PER metric was introduced later on and really considered more, recently. Hence, looking at predictions from 2010 and onwards gives:"
@@ -13150,7 +13151,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "e136dfda",
+   "id": "4b2abeb4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13212,7 +13213,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "c5a2c07e",
+   "id": "28aaf1d3",
    "metadata": {},
    "outputs": [
     {
@@ -13456,7 +13457,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bbc9425",
+   "id": "f3610872",
    "metadata": {},
    "source": [
     "As you can see, the test score increased to 0.71 from 0.67 as perhaps the theory of PER being used more often and with it having the strongest correlation to MVP is evident. Additionally, it is crucial to remember that there are other factors that can influence the MVP winner or voting, not entirely just statistics."
@@ -13467,7 +13468,7 @@
    "id": "c7cb666c",
    "metadata": {},
    "source": [
-    "## 5. Combination of Models"
+    "## 6. Combination of Models"
    ]
   },
   {
