--- a/Exploratory Data Analysis/API Coinmarketcap.ipynb
+++ b/Exploratory Data Analysis/API Coinmarketcap.ipynb
@@ -708,7 +708,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "bf4c7be5",
+   "id": "28f5d63b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec73c8fd",
+   "id": "73e50db0",
    "metadata": {},
    "source": [
     "### A) Look at percentage change of top 5 coins by market cap"
@@ -783,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "a20d16ce",
+   "id": "4fc7bcbd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -797,7 +797,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "ad9ad725",
+   "id": "d449750d",
    "metadata": {
     "scrolled": true
    },
@@ -967,7 +967,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "a8124e62",
+   "id": "6862ea41",
    "metadata": {
     "scrolled": true
    },
@@ -1099,7 +1099,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "5559f52b",
+   "id": "4f0a1870",
    "metadata": {},
    "outputs": [
     {
@@ -1361,7 +1361,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "720926b4",
+   "id": "dd0ddd60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1371,7 +1371,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "4fce8c39",
+   "id": "6a0e3ce1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1381,7 +1381,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "842c12be",
+   "id": "c1a08c89",
    "metadata": {},
    "outputs": [
     {
@@ -1641,7 +1641,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "88e4784e",
+   "id": "dc9846c2",
    "metadata": {},
    "outputs": [
     {
@@ -1662,7 +1662,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67b0e7ec",
+   "id": "04e803e6",
    "metadata": {},
    "source": [
     "### B) Which top 100 coins have been performing the best in the past 90 days?"
@@ -1671,7 +1671,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "f43ca2d8",
+   "id": "f7e4801e",
    "metadata": {},
    "outputs": [
     {
@@ -1851,7 +1851,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "e4fbf95d",
+   "id": "8444c6db",
    "metadata": {},
    "outputs": [
     {
@@ -2255,7 +2255,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "0c491ef5",
+   "id": "15d221ec",
    "metadata": {},
    "outputs": [
     {
@@ -2276,16 +2276,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d6d76af",
+   "id": "22a4102c",
    "metadata": {},
    "source": [
-    "### C) Best performinga and worst performing coins in the 50mil to 1bil market cap range"
+    "### C) Best performing and worst performing coins in the 50mil to 1bil market cap range"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "6adec257",
+   "id": "979eb83a",
    "metadata": {
     "scrolled": false
    },
@@ -2946,7 +2946,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73f1840d",
+   "id": "7b17f688",
    "metadata": {},
    "source": [
     "- potentials_1 = top 10 best performing\n",
@@ -2956,7 +2956,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "401ec3fe",
+   "id": "3f30f0d1",
    "metadata": {},
    "outputs": [
     {
@@ -3162,7 +3162,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "7b573f57",
+   "id": "927a23e9",
    "metadata": {},
    "outputs": [
     {
@@ -3342,7 +3342,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "51ea93b3",
+   "id": "0bdd74fc",
    "metadata": {
     "scrolled": false
    },
@@ -3748,7 +3748,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "53219d2a",
+   "id": "c9ef68ba",
    "metadata": {},
    "outputs": [
     {
@@ -4152,7 +4152,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "23762069",
+   "id": "70d85a03",
    "metadata": {},
    "outputs": [
     {
@@ -4174,7 +4174,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "2f1cfa98",
+   "id": "7c147900",
    "metadata": {},
    "outputs": [
     {
@@ -4195,7 +4195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4e4a271",
+   "id": "91548cc7",
    "metadata": {},
    "source": [
     "**END**"
