--- a/Bootcamp/Final Project/Galleria Data Warehouse Part 2- Understanding the Data.ipynb
+++ b/Bootcamp/Final Project/Galleria Data Warehouse Part 2- Understanding the Data.ipynb
@@ -1423,15 +1423,15 @@
    "id": "28297eb3",
    "metadata": {},
    "source": [
-    "- Stock Code and Product Group and essentially the same in identifying the product. The product group essentially gives the group name in short for the stock code. However, there are 78 stock code values compared to the group and group name which only have 9. That is because the you can have two products that are pizza but a different type of pizza, so the code is different. So the product group and group name can be formed into a new table with a product key as the group is a single letter which, in the future, can also cause issues when creating a new group with the same letter."
+    "- Stock Code can be used to identify which product is being sold i.e. the name of the product so it can be used in a new table. Alongside this, the description and price can be linked."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fc0515db",
+   "id": "b7ddf3b8",
    "metadata": {},
    "source": [
-    "- The name of the product is linked with its description. There are 77 names and 65 descriptions due to the NULL descriptions. Hence, a new table can be made for these two. Alongside this, the price can be added to demonstrate the price of each of these named items."
+    "- The product group can be used to identify which group the product lies in and can be linked with the group name."
    ]
   },
   {
@@ -1455,16 +1455,16 @@
    "id": "42944f3e",
    "metadata": {},
    "source": [
-    "Plan of STAR schema to be implemented as it is simpler and better to use for PowerBI than the snowflake schema. As there are no unique IDs in this table, a primary ID must be created with multiple foreign IDs as follows:\n",
+    "Plan of STAR schema to be implemented as it is simpler and better to use for PowerBI than the snowflake schema. As there are no unique IDs in this table other than stock code (used to identify the item being sold), a primary ID must be created with multiple foreign IDs as follows:\n",
     "\n",
     "Fact Table: \n",
-    "- [PrimaryID, SaleDate, TicketNo, Stock_Code, OutletID, CardTypeID, ProductID, NameID, OrderQty, Total] --> SalesID is primary key\n",
+    "- [SaleID, SaleDate, TicketNo, Stock_Code, OutletID, CardID, GroupID, OrderQty, Total] --> SalesID is primary key\n",
     "\n",
     "Dimension Tables: \n",
-    "-    - [ProductID, Product_Group, Group_name]\n",
-    "    - [NameID, Name, Description, Price]\n",
+    "-    - [GroupID, Product_Group, Group_name]\n",
+    "    - [StockCode, Name, Description, Price]\n",
     "    - [OutletID, Outlet]\n",
-    "    - [CardTypeID, CardType]"
+    "    - [CardID, CardType]"
    ]
   },
   {
@@ -1477,21 +1477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "02c8e7a2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# add index\n",
-    "df['OutletID'] = list(range(1,df.shape[0]+1))\n",
-    "df['CardTypeID'] = list(range(1,df.shape[0]+1))\n",
-    "df['ProductID'] = list(range(1,df.shape[0]+1))\n",
-    "df['NameID'] = list(range(1,df.shape[0]+1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "id": "4e737461",
    "metadata": {
     "scrolled": false
@@ -1530,10 +1516,6 @@
        "      <th>Product_Group</th>\n",
        "      <th>Group_name</th>\n",
        "      <th>CardType</th>\n",
-       "      <th>OutletID</th>\n",
-       "      <th>CardTypeID</th>\n",
-       "      <th>ProductID</th>\n",
-       "      <th>NameID</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1551,10 +1533,6 @@
        "      <td>B</td>\n",
        "      <td>Breakfast</td>\n",
        "      <td>Avis</td>\n",
-       "      <td>40701</td>\n",
-       "      <td>40701</td>\n",
-       "      <td>40701</td>\n",
-       "      <td>40701</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>40701</th>\n",
@@ -1570,10 +1548,6 @@
        "      <td>B</td>\n",
        "      <td>Breakfast</td>\n",
        "      <td>Maestercard</td>\n",
-       "      <td>40702</td>\n",
-       "      <td>40702</td>\n",
-       "      <td>40702</td>\n",
-       "      <td>40702</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>40702</th>\n",
@@ -1589,10 +1563,6 @@
        "      <td>B</td>\n",
        "      <td>Breakfast</td>\n",
        "      <td>Debit Card</td>\n",
-       "      <td>40703</td>\n",
-       "      <td>40703</td>\n",
-       "      <td>40703</td>\n",
-       "      <td>40703</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>40703</th>\n",
@@ -1608,10 +1578,6 @@
        "      <td>C</td>\n",
        "      <td>Crepes and Galettes</td>\n",
        "      <td>Visa</td>\n",
-       "      <td>40704</td>\n",
-       "      <td>40704</td>\n",
-       "      <td>40704</td>\n",
-       "      <td>40704</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>40704</th>\n",
@@ -1627,10 +1593,6 @@
        "      <td>B</td>\n",
        "      <td>Breakfast</td>\n",
        "      <td>Debit Card</td>\n",
-       "      <td>40705</td>\n",
-       "      <td>40705</td>\n",
-       "      <td>40705</td>\n",
-       "      <td>40705</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1651,22 +1613,15 @@
        "40703  Crepe Japonnais  Teriyaky Salmon & Shitake Mushrooms, with salad   \n",
        "40704   Belgian waffle                                              NaN   \n",
        "\n",
-       "       Price Product_Group           Group_name     CardType  OutletID  \\\n",
-       "40700    5.0             B            Breakfast         Avis     40701   \n",
-       "40701    5.0             B            Breakfast  Maestercard     40702   \n",
-       "40702    5.0             B            Breakfast   Debit Card     40703   \n",
-       "40703    7.5             C  Crepes and Galettes         Visa     40704   \n",
-       "40704    5.0             B            Breakfast   Debit Card     40705   \n",
-       "\n",
-       "       CardTypeID  ProductID  NameID  \n",
-       "40700       40701      40701   40701  \n",
-       "40701       40702      40702   40702  \n",
-       "40702       40703      40703   40703  \n",
-       "40703       40704      40704   40704  \n",
-       "40704       40705      40705   40705  "
+       "       Price Product_Group           Group_name     CardType  \n",
+       "40700    5.0             B            Breakfast         Avis  \n",
+       "40701    5.0             B            Breakfast  Maestercard  \n",
+       "40702    5.0             B            Breakfast   Debit Card  \n",
+       "40703    7.5             C  Crepes and Galettes         Visa  \n",
+       "40704    5.0             B            Breakfast   Debit Card  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1677,7 +1632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "id": "b74d96d5",
    "metadata": {},
    "outputs": [],
@@ -1695,7 +1650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 27,
    "id": "a36d7eab",
    "metadata": {
     "scrolled": true
@@ -1753,7 +1708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "3a91b1a4",
    "metadata": {
     "scrolled": true
@@ -1792,10 +1747,6 @@
        "      <th>ProductGroup</th>\n",
        "      <th>GroupName</th>\n",
        "      <th>CardType</th>\n",
-       "      <th>OutletID</th>\n",
-       "      <th>CardTypeID</th>\n",
-       "      <th>ProductID</th>\n",
-       "      <th>NameID</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1813,10 +1764,6 @@
        "      <td>C</td>\n",
        "      <td>Crepes and Galettes</td>\n",
        "      <td>Avis</td>\n",
-       "      <td>20</td>\n",
-       "      <td>20</td>\n",
-       "      <td>20</td>\n",
-       "      <td>20</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1829,14 +1776,11 @@
        "                  Name                                        Description  \\\n",
        "19  The Sicilian Crepe  Tuna, black olives, cheddar cheese, spinach an...   \n",
        "\n",
-       "    Price ProductGroup            GroupName CardType  OutletID  CardTypeID  \\\n",
-       "19    7.5            C  Crepes and Galettes     Avis        20          20   \n",
-       "\n",
-       "    ProductID  NameID  \n",
-       "19         20      20  "
+       "    Price ProductGroup            GroupName CardType  \n",
+       "19    7.5            C  Crepes and Galettes     Avis  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1847,7 +1791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "ce8eb6fd",
    "metadata": {},
    "outputs": [
@@ -1884,10 +1828,6 @@
        "      <th>ProductGroup</th>\n",
        "      <th>GroupName</th>\n",
        "      <th>CardType</th>\n",
-       "      <th>OutletID</th>\n",
-       "      <th>CardTypeID</th>\n",
-       "      <th>ProductID</th>\n",
-       "      <th>NameID</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1905,10 +1845,6 @@
        "      <td>C</td>\n",
        "      <td>Crepes and Galettes</td>\n",
        "      <td>Visa</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1921,14 +1857,11 @@
        "              Name                                      Description  Price  \\\n",
        "2  Crepe Japonnais  Teriyaky Salmon & Shitake Mushrooms, with salad    7.5   \n",
        "\n",
-       "  ProductGroup            GroupName CardType  OutletID  CardTypeID  ProductID  \\\n",
-       "2            C  Crepes and Galettes     Visa         3           3          3   \n",
-       "\n",
-       "   NameID  \n",
-       "2       3  "
+       "  ProductGroup            GroupName CardType  \n",
+       "2            C  Crepes and Galettes     Visa  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1939,7 +1872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "ff5da235",
    "metadata": {
     "scrolled": true
@@ -1978,10 +1911,6 @@
        "      <th>ProductGroup</th>\n",
        "      <th>GroupName</th>\n",
        "      <th>CardType</th>\n",
-       "      <th>OutletID</th>\n",
-       "      <th>CardTypeID</th>\n",
-       "      <th>ProductID</th>\n",
-       "      <th>NameID</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1999,10 +1928,6 @@
        "      <td>P</td>\n",
        "      <td>Pizza</td>\n",
        "      <td>Avis</td>\n",
-       "      <td>319</td>\n",
-       "      <td>319</td>\n",
-       "      <td>319</td>\n",
-       "      <td>319</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2015,11 +1940,11 @@
        "                                       Description  Price ProductGroup  \\\n",
        "318  Tomato base, Mozzarella, chorizo & Gorgonzola   10.0            P   \n",
        "\n",
-       "    GroupName CardType  OutletID  CardTypeID  ProductID  NameID  \n",
-       "318     Pizza     Avis       319         319        319     319  "
+       "    GroupName CardType  \n",
+       "318     Pizza     Avis  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
