--- a/Webscraping/API Coinmarketcap.ipynb
+++ b/Webscraping/API Coinmarketcap.ipynb
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_api_key = '",
+    "my_api_key = '',
     "test_api_key = '0ad53085-1cb2-4eb8-ad9e-3ffbd7e56509'"
    ]
   },
