working on scran scraper

--- a/ZoomCamp/Project2/script.ipynb
+++ b/ZoomCamp/Project2/script.ipynb
@@ -4,44 +4,75 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://github.com/binance/binance-spot-api-docs/blob/master/web-socket-streams.md"
+    "- Can only pull 2 million tweets per month\n",
+    "- roughly 66,666 tweets per day\n",
+    "- roughly 2,777 tweets per hour\n",
+    "- 46 tweets per minute"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://developer.twitter.com/en/docs/twitter-api"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://developer.twitter.com/apitools/query?query=LUk6UlQgTDplbiBjb3ZpZCBjb3JvbmE%3D"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import websocket, json"
+    "import os\n",
+    "import tweepy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# link to socket\n",
-    "base_url = 'wss://stream.binance.com:9443/ws/'"
+    "# API Keys\n",
+    "TWITTER_KEY = os.environ.get(\"TWITTER_KEY\")\n",
+    "TWITTER_SECRET_KEY = os.environ.get(\"TWITTER_SECRET_KEY\")\n",
+    "TWITTER_BEARER_TOKEN = os.environ.get(\"TWITTER_BEARER_TOKEN\")\n",
+    "TWITTER_ACCESS_TOKEN = os.environ.get(\"TWITTER_ACCESS_TOKEN\")\n",
+    "TWITTER_ACCESS_TOKEN_SECRET = os.environ.get(\"TWITTER_ACCESS_TOKEN_SECRET\")\n",
+    "TWITTER_CLIENT_ID = os.environ.get(\"TWITTER_CLIENT_ID\")\n",
+    "TWITTER_CLIENT_SECRET = os.environ.get(\"TWITTER_CLIENT_SECRET\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# build web socket connection function\n",
-    "def on_message(ws, message):\n",
-    "    print(message)\n",
-    "\n",
-    "def on_close():\n",
-    "    print(\"Websocket Closed!\")\n",
-    "\n",
-    "def websocketing(socket):\n",
-    "    ws = websocket.WebSocketApp(socket, on_message=on_message, on_close=on_close)\n",
-    "    ws.run_forever()"
+    "client = tweepy.Client(\n",
+    "    TWITTER_BEARER_TOKEN, \n",
+    "    TWITTER_KEY, \n",
+    "    TWITTER_SECRET_KEY, \n",
+    "    TWITTER_ACCESS_TOKEN, \n",
+    "    TWITTER_ACCESS_TOKEN_SECRET\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# queries and filters\n",
+    "topic = '\"world cup\" worldcup'"
    ]
   },
   {
@@ -50,10 +81,166 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# get candlestick information for a crypto currency at different time intervals\n",
-    "def kline(coin, interval):\n",
-    "    socket = base_url + f'{coin}@kline_{interval}'\n",
-    "    return socket"
+    "# gets the actual tweets with the specific conditions\n",
+    "def response(topic):\n",
+    "    # query by topic, that is not a retweet, in english and in the UK or US\n",
+    "    query = f'{topic} -is:retweet lang:en'\n",
+    "    return client.search_recent_tweets(query=query, max_results=10).data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Soccer Picks Daily Show World Cup Props Football Picks - Predictions, Tonys Picks 11/14/2022   #WorldCup #WorldCupPicks #WorldCupProps #SoccerPicks   Visit https://t.co/YZQm1JL1CD for Free and Premium Picks from Documented Handicappers https://t.co/Wy034ABDE1\n",
+      "None\n",
+      "1592234873661837314\n",
+      "@Shill_Ronin 💎💎💎LAUNCHED NOV 1 💎💎💎\n",
+      "\n",
+      "Shiba World Cup\n",
+      "1️⃣ PROS make #bet 💵 \n",
+      "2️⃣ WINS buyback and burn 🔥 \n",
+      "3️⃣ #BNB reward to holders\n",
+      "✅ #LBANK listing\n",
+      "✅ #NY TIMES SQUARE Billboard\n",
+      "\n",
+      "#ShibaWorldCup #WorldCup #BSCgem $SWC\n",
+      "@shibawc\n",
+      "TG: https://t.co/jZa6ep85r0\n",
+      "twitter: https://t.co/eoKTTrYYk4\n",
+      "None\n",
+      "1592234813414674434\n",
+      "@davidgokhshtein 💎💎💎LAUNCHED NOV 1 💎💎💎\n",
+      "\n",
+      "Shiba World Cup\n",
+      "1️⃣ PROS make #bet 💵 \n",
+      "2️⃣ WINS buyback and burn 🔥 \n",
+      "3️⃣ #BNB reward to holders\n",
+      "✅ #LBANK listing\n",
+      "✅ #NY TIMES SQUARE Billboard\n",
+      "\n",
+      "#ShibaWorldCup #WorldCup #BSCgem $SWC\n",
+      "@shibawc\n",
+      "TG: https://t.co/jZa6ep8Dgy\n",
+      "twitter: https://t.co/eoKTTrZw9C\n",
+      "None\n",
+      "1592234747895615488\n",
+      "@MartiniGuyYT 💎💎💎LAUNCHED NOV 1 💎💎💎\n",
+      "\n",
+      "Shiba World Cup\n",
+      "1️⃣ PROS make #bet 💵 \n",
+      "2️⃣ WINS buyback and burn 🔥 \n",
+      "3️⃣ #BNB reward to holders\n",
+      "✅ #LBANK listing\n",
+      "✅ #NY TIMES SQUARE Billboard\n",
+      "\n",
+      "#ShibaWorldCup #WorldCup #BSCgem $SWC\n",
+      "@shibawc\n",
+      "TG: https://t.co/jZa6ep85r0\n",
+      "twitter: https://t.co/eoKTTrYYk4\n",
+      "None\n",
+      "1592234640806477826\n",
+      "BBC started its first daily radio broadcasting in Marconi’s London studio 2LO on November 14, 1922.\n",
+      "\n",
+      "100 years later…\n",
+      "\n",
+      "I am chuffed to appear on BBC Sport World Cup advert 2022\n",
+      "\n",
+      "✨Massive thanks to my agent @REDTalentMgt \n",
+      "\n",
+      "https://t.co/gN2Xr79cr1\n",
+      "#WorldCup #Qatar2022 #BBCSport https://t.co/r0bqaN1q2H\n",
+      "None\n",
+      "1592234634544308224\n",
+      "@cryptojack 💎💎💎LAUNCHED NOV 1 💎💎💎\n",
+      "\n",
+      "Shiba World Cup\n",
+      "1️⃣ PROS make #bet 💵 \n",
+      "2️⃣ WINS buyback and burn 🔥 \n",
+      "3️⃣ #BNB reward to holders\n",
+      "✅ #LBANK listing\n",
+      "✅ #NY TIMES SQUARE Billboard\n",
+      "\n",
+      "#ShibaWorldCup #WorldCup #BSCgem $SWC\n",
+      "@shibawc\n",
+      "TG: https://t.co/jZa6ep8Dgy\n",
+      "twitter: https://t.co/eoKTTrZw9C\n",
+      "None\n",
+      "1592234577216811008\n",
+      "@ChinaPumpWXC 💎💎💎LAUNCHED NOV 1 💎💎💎\n",
+      "\n",
+      "Shiba World Cup\n",
+      "1️⃣ PROS make #bet 💵 \n",
+      "2️⃣ WINS buyback and burn 🔥 \n",
+      "3️⃣ #BNB reward to holders\n",
+      "✅ #LBANK listing\n",
+      "✅ #NY TIMES SQUARE Billboard\n",
+      "\n",
+      "#ShibaWorldCup #WorldCup #BSCgem $SWC\n",
+      "@shibawc\n",
+      "TG: https://t.co/jZa6ep8Dgy\n",
+      "twitter: https://t.co/eoKTTrZw9C\n",
+      "None\n",
+      "1592234520006492160\n",
+      "@MrRealWhale 💎💎💎LAUNCHED NOV 1 💎💎💎\n",
+      "\n",
+      "Shiba World Cup\n",
+      "1️⃣ PROS make #bet 💵 \n",
+      "2️⃣ WINS buyback and burn 🔥 \n",
+      "3️⃣ #BNB reward to holders\n",
+      "✅ #LBANK listing\n",
+      "✅ #NY TIMES SQUARE Billboard\n",
+      "\n",
+      "#ShibaWorldCup #WorldCup #BSCgem $SWC\n",
+      "@shibawc\n",
+      "TG: https://t.co/jZa6ep8Dgy\n",
+      "twitter: https://t.co/eoKTTrZw9C\n",
+      "None\n",
+      "1592234462133522432\n",
+      "@AltCryptoGems 💎💎💎LAUNCHED NOV 1 💎💎💎\n",
+      "\n",
+      "Shiba World Cup\n",
+      "1️⃣ PROS make #bet 💵 \n",
+      "2️⃣ WINS buyback and burn 🔥 \n",
+      "3️⃣ #BNB reward to holders\n",
+      "✅ #LBANK listing\n",
+      "✅ #NY TIMES SQUARE Billboard\n",
+      "\n",
+      "#ShibaWorldCup #WorldCup #BSCgem $SWC\n",
+      "@shibawc\n",
+      "TG: https://t.co/jZa6ep8Dgy\n",
+      "twitter: https://t.co/eoKTTrZw9C\n",
+      "None\n",
+      "1592234342637797376\n",
+      "@sofizamolo 💎💎💎LAUNCHED NOV 1 💎💎💎\n",
+      "\n",
+      "Shiba World Cup\n",
+      "1️⃣ PROS make #bet 💵 \n",
+      "2️⃣ WINS buyback and burn 🔥 \n",
+      "3️⃣ #BNB reward to holders\n",
+      "✅ #LBANK listing\n",
+      "✅ #NY TIMES SQUARE Billboard\n",
+      "\n",
+      "#ShibaWorldCup #WorldCup #BSCgem $SWC\n",
+      "@shibawc\n",
+      "TG: https://t.co/jZa6ep8Dgy\n",
+      "twitter: https://t.co/eoKTTrZw9C\n",
+      "None\n",
+      "1592234285674950657\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "for tweet in response(topic):\n",
+    "    print(tweet.text)\n",
+    "    print(tweet.created_at)\n",
+    "    print(tweet.id)"
    ]
   },
   {
@@ -61,10 +248,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# testing websocket \n",
-    "websocketing(kline('btcusdt', '1m'))"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
